# cubek

./: Cargo.toml  README.md
benchmarks/: Cargo.toml
benchmarks/benches/: einsum.rs  reduce.rs
crates/cubek/: Cargo.toml
crates/cubek-attention/: Cargo.toml
crates/cubek-attention/tests/suite/: attention_test_launcher.rs  cpu_reference.rs  mod.rs  test_utils.rs
crates/cubek-convolution/: Cargo.toml
crates/cubek-einsum/: Cargo.toml  README.md
crates/cubek-einsum/src/: error.rs  lib.rs
crates/cubek-einsum/src/kernels/: broadcast_multiply.rs  copy_reshape.rs  diagonal.rs  dot_product.rs  hadamard.rs  mod.rs  outer_product.rs  trace.rs
crates/cubek-einsum/src/launch/: executor.rs  mod.rs
crates/cubek-einsum/src/notation/: notation.rs  parser.rs
crates/cubek-einsum/src/optimization/: cost.rs  greedy.rs  mod.rs  plan.rs
crates/cubek-einsum/src/pattern/: binary.rs  mod.rs  unary.rs
crates/cubek-einsum/tests/suite/: optimization_tests.rs  pattern_tests.rs
crates/cubek-matmul/: Cargo.toml
crates/cubek-matmul/tests/suite/: mod.rs  test_utils.rs  test_utils_2.rs
crates/cubek-quant/: Cargo.toml
crates/cubek-random/: Cargo.toml
crates/cubek-reduce/: Cargo.toml
crates/cubek-reduce/src/: lib.rs
crates/cubek-reduce/src/components/: mod.rs  writer.rs
crates/cubek-reduce/src/launch/: base.rs  info.rs  strategy.rs
crates/cubek-reduce/src/routines/: base.rs  blueprint.rs  reduce_dim.rs
crates/cubek-reduce/tests/suite/: mod.rs  reduce_dim.rs
crates/cubek-std/src/test_utils/: correctness.rs
crates/cubek/src/: lib.rs
(+25 files in other folders)
