[package]
authors = ["CubeCL Contributors"]
categories = ["science", "mathematics", "algorithms"]
description = "CubeK: Einstein Summation (Einsum) - SOTA tensor contraction for GPU"
edition.workspace = true
keywords = ["einsum", "tensor", "contraction", "gpu"]
license.workspace = true
name = "cubek-einsum"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubek/tree/main/crates/cubek-einsum"
version.workspace = true

[features]
default = ["std", "cubecl/default"]
std = ["cubecl/std", "thiserror/std"]

# Test features
einsum_tests_matmul = []
einsum_tests_reduce = []
einsum_tests_transpose = []
einsum_tests_batch = []
einsum_tests_contraction = []
einsum_tests_f16 = []
einsum_tests_f32 = []

einsum_tests_base = [
    "einsum_tests_matmul",
    "einsum_tests_reduce",
    "einsum_tests_transpose",
    "einsum_tests_f32",
]

[dependencies]
cubek-matmul = { path = "../cubek-matmul", version = "=0.0.1", default-features = false }
cubek-reduce = { path = "../cubek-reduce", version = "=0.0.1", default-features = false }

cubecl = { workspace = true, features = ["stdlib"] }
cubecl-common = { workspace = true }

half = { workspace = true, features = ["bytemuck"] }
serde = { workspace = true }
thiserror = { workspace = true }
smallvec = { workspace = true }
hashbrown = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
cubecl = { workspace = true, features = ["test-runtime"] }
